--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">MyCompose</string>
     <string name="title_activity_second">SecondActivity</string>
     <string name="title_activity_home">HomeActivity</string>
+    <string name="title_activity_pager">PagerActivity</string>
+    <string name="title_activity_view_pager_compose">ViewPagerCompose</string>
 </resources>
